@@ -1,183 +1,223 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>ch.rasc</groupId>
-	<artifactId>dataformat</artifactId>
-	<version>1.0.0</version>
-	<packaging>jar</packaging>
-	<name>dataformats</name>
-	<description>Various dataformats with Spring Boot</description>
-	<parent>
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>4.0.6</version>
+  </parent>
+  <groupId>ch.rasc</groupId>
+  <artifactId>dataformat</artifactId>
+  <version>1.0.0</version>
+  <packaging>jar</packaging>
+  <name>dataformats</name>
+  <description>Various dataformats with Spring Boot</description>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.version>25</java.version>
+    <flatbuffers-java.version>25.2.10</flatbuffers-java.version>
+    <flatc.version>${flatbuffers-java.version}</flatc.version>
+    <flatc.directory>${project.basedir}/.flatbuffers</flatc.directory>
+    <flatc.output.directory>${project.build.directory}/generated-sources/flatbuffers</flatc.output.directory>
+    <protobuf-java.version>4.35.0</protobuf-java.version>
+  </properties>
+  <dependencies>
+	<dependency>
 		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>4.0.6</version>
-	</parent>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<start-class>ch.rasc.dataformat.Application</start-class>
-		<java.version>25</java.version>
-		<flatbuffers-java.version>25.2.10</flatbuffers-java.version>
-		<flatc.version>${flatbuffers-java.version}</flatc.version>
-		<flatc.directory>${project.basedir}/.flatbuffers</flatc.directory>
-		<flatc.output.directory>${project.build.directory}/generated-sources/flatbuffers</flatc.output.directory>
-		<protobuf-java.version>4.34.1</protobuf-java.version>
-	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>jakarta.xml.bind</groupId>
-			<artifactId>jakarta.xml.bind-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.jaxb</groupId>
-			<artifactId>jaxb-runtime</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>tools.jackson.dataformat</groupId>
-			<artifactId>jackson-dataformat-cbor</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>tools.jackson.dataformat</groupId>
-			<artifactId>jackson-dataformat-csv</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>tools.jackson.dataformat</groupId>
-			<artifactId>jackson-dataformat-smile</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.msgpack</groupId>
-			<artifactId>msgpack</artifactId>
-			<version>0.6.12</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.protobuf</groupId>
-			<artifactId>protobuf-java</artifactId>
-			<version>${protobuf-java.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.flatbuffers</groupId>
-			<artifactId>flatbuffers-java</artifactId>
-			<version>${flatbuffers-java.version}</version>
-		</dependency>
-	</dependencies>
-	<build>
-		<finalName>dataformat</finalName>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<jvmArguments>--add-opens java.base/java.lang=ALL-UNNAMED</jvmArguments>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>io.github.ascopes</groupId>
-				<artifactId>protobuf-maven-plugin</artifactId>
-				<version>5.1.3</version>
-				<configuration>
-					<protoc>${protobuf-java.version}</protoc>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>3.1.0</version>
-				<executions>
-					<execution>
-						<id>generate-flatbuffers</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<target>
-								<mkdir dir="${flatc.directory}" />
-								<mkdir dir="${flatc.output.directory}" />
-								<get src="${flatc.url}" dest="${flatc.directory}/flatc.zip"
-									skipexisting="true" />
-								<unzip src="${flatc.directory}/flatc.zip" dest="${flatc.directory}"
-									overwrite="false" />
-								<chmod file="${flatc.executable}" perm="755" osfamily="unix" />
-								<apply executable="${flatc.executable}" failonerror="true"
-									parallel="false">
-									<arg value="--java" />
-									<arg value="-o" />
-									<arg value="${flatc.output.directory}" />
-									<fileset dir="${project.basedir}/src/main/flatbuffers">
-										<include name="*.fbs" />
-									</fileset>
-								</apply>
-							</target>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>add-source</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>add-source</goal>
-						</goals>
-						<configuration>
-							<sources>
-								<source>${project.build.directory}/generated-sources/flatbuffers</source>
-							</sources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-	<profiles>
-		<profile>
-			<id>windows-flatc</id>
-			<activation>
-				<os>
-					<family>Windows</family>
-				</os>
-			</activation>
-			<properties>
-				<flatc.url>https://github.com/google/flatbuffers/releases/download/v${flatc.version}/Windows.flatc.binary.zip</flatc.url>
-				<flatc.executable>${flatc.directory}/flatc.exe</flatc.executable>
-			</properties>
-		</profile>
-		<profile>
-			<id>linux-flatc</id>
-			<activation>
-				<os>
-					<name>Linux</name>
-				</os>
-			</activation>
-			<properties>
-				<flatc.url>https://github.com/google/flatbuffers/releases/download/v${flatc.version}/Linux.flatc.binary.clang++-15.zip</flatc.url>
-				<flatc.executable>${flatc.directory}/flatc</flatc.executable>
-			</properties>
-		</profile>
-		<profile>
-			<id>macos-flatc</id>
-			<activation>
-				<os>
-					<family>Mac</family>
-				</os>
-			</activation>
-			<properties>
-				<flatc.url>https://github.com/google/flatbuffers/releases/download/v${flatc.version}/Mac.flatc.binary.zip</flatc.url>
-				<flatc.executable>${flatc.directory}/flatc</flatc.executable>
-			</properties>
-		</profile>
-	</profiles>
+		<artifactId>spring-boot-starter-webmvc</artifactId>
+	</dependency>
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>tools.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-cbor</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>tools.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-csv</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>tools.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-smile</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.msgpack</groupId>
+      <artifactId>msgpack</artifactId>
+      <version>0.6.12</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.protobuf</groupId>
+      <artifactId>protobuf-java</artifactId>
+      <version>${protobuf-java.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.flatbuffers</groupId>
+      <artifactId>flatbuffers-java</artifactId>
+      <version>${flatbuffers-java.version}</version>
+    </dependency>
+  </dependencies>
+  <build>
+    <finalName>dataformat</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <jvmArguments>--add-opens java.base/java.lang=ALL-UNNAMED</jvmArguments>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>io.github.ascopes</groupId>
+        <artifactId>protobuf-maven-plugin</artifactId>
+        <version>5.1.4</version>
+        <configuration>
+          <protoc>${protobuf-java.version}</protoc>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>3.2.0</version>
+        <executions>
+          <execution>
+            <id>generate-flatbuffers</id>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <phase>generate-sources</phase>
+            <configuration>
+              <target>
+                <mkdir dir="${flatc.directory}"/>
+                <mkdir dir="${flatc.output.directory}"/>
+                <get dest="${flatc.directory}/flatc.zip" skipexisting="true" src="${flatc.url}"/>
+                <unzip dest="${flatc.directory}" overwrite="false" src="${flatc.directory}/flatc.zip"/>
+                <chmod file="${flatc.executable}" osfamily="unix" perm="755"/>
+                <apply executable="${flatc.executable}" failonerror="true" parallel="false">
+                  <arg value="--java"/>
+                  <arg value="-o"/>
+                  <arg value="${flatc.output.directory}"/>
+                  <fileset dir="${project.basedir}/src/main/flatbuffers">
+                    <include name="*.fbs"/>
+                  </fileset>
+                </apply>
+              </target>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>add-source</id>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <phase>generate-sources</phase>
+            <configuration>
+              <sources>
+                <source>${project.build.directory}/generated-sources/flatbuffers</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.15.0</version>
+        <configuration>
+          <fork>true</fork>
+          <compilerArgs>
+            <arg>-XDcompilePolicy=simple</arg>
+            <arg>--should-stop=ifError=FLOW</arg>
+            <arg>-Xplugin:ErrorProne</arg>
+            <arg>-XDaddTypeAnnotationsToSymbol=true</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+          </compilerArgs>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>com.google.errorprone</groupId>
+              <artifactId>error_prone_core</artifactId>
+              <version>2.49.0</version>
+            </path>
+          </annotationProcessorPaths>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>com.github.ekryd.sortpom</groupId>
+        <artifactId>sortpom-maven-plugin</artifactId>
+        <version>4.0.0</version>
+        <configuration>
+          <createBackupFile>false</createBackupFile>
+          <nrOfIndentSpace>2</nrOfIndentSpace>
+          <sortProperties>false</sortProperties>
+        </configuration>
+      </plugin>
+
+    </plugins>
+  </build>
+  <profiles>
+    <profile>
+      <id>windows-flatc</id>
+      <activation>
+        <os>
+          <family>Windows</family>
+        </os>
+      </activation>
+      <properties>
+        <flatc.url>https://github.com/google/flatbuffers/releases/download/v${flatc.version}/Windows.flatc.binary.zip</flatc.url>
+        <flatc.executable>${flatc.directory}/flatc.exe</flatc.executable>
+      </properties>
+    </profile>
+    <profile>
+      <id>linux-flatc</id>
+      <activation>
+        <os>
+          <name>Linux</name>
+        </os>
+      </activation>
+      <properties>
+        <flatc.url>https://github.com/google/flatbuffers/releases/download/v${flatc.version}/Linux.flatc.binary.clang++-15.zip</flatc.url>
+        <flatc.executable>${flatc.directory}/flatc</flatc.executable>
+      </properties>
+    </profile>
+    <profile>
+      <id>macos-flatc</id>
+      <activation>
+        <os>
+          <family>Mac</family>
+        </os>
+      </activation>
+      <properties>
+        <flatc.url>https://github.com/google/flatbuffers/releases/download/v${flatc.version}/Mac.flatc.binary.zip</flatc.url>
+        <flatc.executable>${flatc.directory}/flatc</flatc.executable>
+      </properties>
+    </profile>
+  </profiles>
 </project>
